# pong

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Pipfile  build.py  conanfile.py
conan/: conf  require
conan/darwin/: llvm-19  llvm-20
conan/linux/: llvm-19  llvm-19-build  llvm-20  llvm-20-build
pong/: CMakeLists.txt  ai.cpp  components.cpp  constants.cpp  events.cpp  game.cpp  main.cpp  pong.cpp  pong_scene.cpp  scene.cpp  test.cpp
resources/shaders/: triangle.vert
vis/: CMakeLists.txt
vis/lib/: CMakeLists.txt  app.cpp  ecs.cpp  engine.cpp  entt.cpp  math.cpp  mesh.cpp  opengl.cpp  physic.cpp  time.cpp  utility.cpp  vis.cpp  vulkan.cpp  vulkan_helper.cpp  window.cpp
vis/lib/ecs/: entt.hpp  operators.inc  std.inc
vis/lib/ecs/config/: config.h
vis/lib/ecs/container/: dense_map.hpp  dense_map.inc  dense_set.hpp  dense_set.inc  fwd.hpp  fwd.inc  table.hpp  table.inc
vis/lib/ecs/core/: algorithm.hpp  algorithm.inc  any.hpp  any.inc  bit.hpp  bit.inc  compressed_pair.hpp  compressed_pair.inc  enum.hpp  enum.inc  family.hpp  family.inc  fwd.hpp  fwd.inc  hashed_string.hpp  hashed_string.inc  ident.hpp  ident.inc  iterator.hpp  iterator.inc  memory.hpp  memory.inc  monostate.hpp  monostate.inc  ranges.hpp  ranges.inc  tuple.hpp  tuple.inc  type_info.hpp  type_info.inc  type_traits.hpp  type_traits.inc  utility.hpp  utility.inc
vis/lib/ecs/entity/: component.hpp  component.inc  entity.hpp  entity.inc  fwd.hpp  fwd.inc  group.hpp  group.inc  handle.hpp  handle.inc  helper.hpp  helper.inc  mixin.hpp  mixin.inc  organizer.hpp  organizer.inc  ranges.hpp  ranges.inc  registry.hpp  registry.inc  runtime_view.hpp  runtime_view.inc  snapshot.hpp  snapshot.inc  sparse_set.hpp  sparse_set.inc  storage.hpp  storage.inc  view.hpp  view.inc
vis/lib/ecs/graph/: adjacency_matrix.hpp  adjacency_matrix.inc  dot.hpp  dot.inc  flow.hpp  flow.inc  fwd.hpp  fwd.inc
vis/lib/ecs/locator/: locator.hpp  locator.inc
vis/lib/ecs/meta/: adl_pointer.hpp  adl_pointer.inc  container.hpp  container.inc  context.hpp  context.inc  factory.hpp  factory.inc  fwd.hpp  fwd.inc  meta.hpp  meta.inc  node.hpp  pointer.hpp  pointer.inc  policy.hpp  policy.inc  range.hpp  range.inc  resolve.hpp  resolve.inc  template.hpp  template.inc  type_traits.hpp  type_traits.inc  utility.hpp  utility.inc
vis/lib/ecs/poly/: fwd.hpp  fwd.inc  poly.hpp  poly.inc
vis/lib/ecs/process/: fwd.hpp  fwd.inc  process.hpp  process.inc  scheduler.hpp  scheduler.inc
vis/lib/ecs/resource/: cache.hpp  cache.inc  fwd.hpp  fwd.inc  loader.hpp  loader.inc  resource.hpp  resource.inc
vis/lib/ecs/signal/: delegate.hpp  delegate.inc  dispatcher.hpp  dispatcher.inc  emitter.hpp  emitter.inc  fwd.hpp  fwd.inc  sigh.hpp  sigh.inc
vis/lib/graphic/: mesh.cpp  vulkan.cpp  vulkan_helper.cpp  vulkan_impl.cpp
vis/lib/graphic/spirv/: spirv.cpp
vis/lib/graphic/vulkan/: vulkan.cpp  vulkan.cppm  vulkan_helper.cpp  vulkan_impl.cpp  vulkan_renderer.cpp
vis/lib/graphic/vulkan/vkh/: builders.cpp  concepts.cpp  constants.cpp  enums.cpp  helper.cpp  structures.cpp  type_traits.cpp  types.cpp  vk_enum_string_helper.h  vkh.cpp  vulkan_helper.cpp  vulkan_hpp.cpp
vis/lib/physic/: physic.cpp
vis/lib/renderer/: opengl.cpp  vulkan.cpp  vulkan_helper.cpp
vis/lib/utility/: utility.cpp
vis/lib/window/: window.cpp  window_impl.cpp
vis/src/: CMakeLists.txt
